src/test/ui/issues/issue-41255.stderr
error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:11:9
   |
LL |         5.0 => {},
   |         ^^^
   |
note: lint level defined here
  --> $DIR/issue-41255.rs:6:11
   |
LL | #![forbid(illegal_floating_point_literal_pattern)]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:15:9
   |
LL |         5.0f32 => {},
   |         ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:17:10
   |
LL |         -5.0 => {},
   |          ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:19:9
   |
LL |         1.0 .. 33.0 => {},
   |         ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:19:16
   |
LL |         1.0 .. 33.0 => {},
   |                ^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:23:9
   |
LL |         39.0 ..= 70.0 => {},
   |         ^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:23:18
   |
LL |         39.0 ..= 70.0 => {},
   |                  ^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:28:11
   |
LL |         ..71.0 => {}
   |           ^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:31:12
   |
LL |         ..=72.0 => {}
   |            ^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:34:9
   |
LL |         71.0.. => {}
   |         ^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:42:10
   |
LL |         (3.14, 1) => {},
   |          ^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:49:18
   |
LL |         Foo { x: 2.0 } => {},
   |                  ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:11:9
   |
LL |         5.0 => {},
   |         ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: aborting due to 13 previous errors

